--- a/FileConverter.Repository/FileConverter.Repository.csproj
+++ b/FileConverter.Repository/FileConverter.Repository.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="9.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\FileConverter.Core\FileConverter.Core.csproj" />
   </ItemGroup>
 
