--- a/FileConverter.Services/FileConverter.Service.csproj
+++ b/FileConverter.Services/FileConverter.Service.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="9.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\FileConverter.Repository\FileConverter.Repository.csproj" />
   </ItemGroup>
 
