--- a/FileConverter/FileConverter.UI.csproj
+++ b/FileConverter/FileConverter.UI.csproj
@@ -19,4 +19,10 @@
     <ProjectReference Include="..\FileConverter.Services\FileConverter.Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
